# cruise

./: Cargo.toml  README.md  cruise-schema.json  cruise.yaml  package-lock.json  renovate.json5
.github/workflows/: ci.yml  release.yml
prompts/: create-pr.md  implement-after-tests.md  verify-completion.md  write-test-first.md
scripts/: test_adhoc_signing.sh
src/: cancellation.rs  clean_cmd.rs  cli.rs  condition.rs  config.rs  default_config.yaml  display.rs  engine.rs  error.rs  file_tracker.rs  lib.rs  list_cmd.rs  llm_api.rs  main.rs  metadata.rs  multiline_input.rs  option_handler.rs  plan_cmd.rs  platform.rs  resolver.rs  run_cmd.rs  session.rs  spinner.rs  test_support.rs  variable.rs  workflow.rs  workspace.rs  worktree.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  events.rs  gui_option_handler.rs  lib.rs  main.rs  state.rs
src/step/: command.rs  mod.rs  option.rs  prompt.rs
ui/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: App.tsx  index.css  types.ts
ui/src/__tests__/: PhaseBadge.test.tsx  SessionSidebar.run-all-button.test.tsx  SessionSidebar.test.tsx  SidebarFooter.test.tsx  sessionActions.test.ts
ui/src/components/: DirectoryPicker.tsx  MarkdownViewer.tsx  PhaseBadge.tsx  SessionSidebar.tsx
ui/src/lib/: commands.ts  desktopNotifications.ts  format.ts  sessionActions.ts  updater.ts
ui/src/test/: App.awaiting-approval.test.tsx  App.new-session.test.tsx  App.run-all-log.test.tsx  App.run-all-reentry.test.tsx  App.run-all.test.tsx  WorkflowToastStack.test.tsx  desktopNotifications.test.ts
