[package]
name = "cruise"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
console = "0.16.2"
dialoguer = "0.12.0"
indexmap = { version = "2.13.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt", "macros", "process", "io-util", "time"] }
walkdir = "2.5.0"

[profile.release]
codegen-units = 1
lto = true
strip = true

[dev-dependencies]
tempfile = "3.26.0"

[package.metadata.dist]
cargo-dist-version = "0.31.0"
ci = "github"
installers = ["shell", "homebrew"]
targets = ["aarch64-apple-darwin", "x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu", "x86_64-pc-windows-msvc", "aarch64-pc-windows-msvc"]
publish-jobs = ["homebrew"]
install-path = "CARGO_HOME"
tap = "takumi3488/homebrew-tap"
