[package]
description = "YAML-driven coding agent workflow orchestrator"
edition = "2024"
license = "MIT"
name = "cruise"
repository = "https://github.com/smartcrabai/cruise"
version = "0.1.12"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
console = "0.16.2"
indexmap = { version = "2.13.0", features = ["serde"] }
inquire = "0.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = [
  "rt",
  "macros",
  "process",
  "io-util",
  "time",
] }
walkdir = "2.5.0"

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.dist]
inherits = "release"

[dev-dependencies]
tempfile = "=3.26.0"

[workspace]
resolver = "2"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.31.0"
# CI backends to support
ci = "github"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# The installers to generate for each app
installers = ["shell", "homebrew"]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "smartcrabai/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "aarch64-unknown-linux-gnu",
  "aarch64-pc-windows-msvc",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
]
# Whether to install an updater program
install-updater = false
