[package]
description = "YAML-driven coding agent workflow orchestrator"
edition = "2024"
license = "MIT"
name = "cruise"
repository = "https://github.com/smartcrabai/cruise"
version.workspace = true

[workspace]
default-members = ["."]
members = [".", "src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.29"

# Config for 'dist'
[workspace.metadata.dist]
allow-dirty = ["ci"]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.31.0"
# Build only the specific app being released, not the entire workspace.
# Without this, --workspace pulls in cruise-gui's GTK3 deps on Linux.
precise-builds = true
# CI backends to support
ci = "github"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# The installers to generate for each app
installers = ["shell", "homebrew", "powershell"]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "smartcrabai/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "aarch64-unknown-linux-gnu",
  "aarch64-pc-windows-msvc",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
]
# Whether to install an updater program
install-updater = false

[features]
test-utils = []

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
console = "0.16.2"
home = "0.5"
indexmap = { version = "2.13.0", features = ["serde"] }
inquire = "0.9"
reedline = "0.46"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = [
  "rt",
  "macros",
  "process",
  "io-util",
  "time",
  "signal",
] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "=3.27.0"

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.dist]
inherits = "release"

[lints.clippy]
allow_attributes = "deny"
dbg_macro = "deny"
expect_used = "deny"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
