[package]
name = "cruise-gui"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
cruise = { path = ".." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["sync", "rt"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lints.clippy]
dbg_macro = "deny"
expect_used = "deny"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
