[package]
name = "cruise-gui"
version.workspace = true
edition = "2024"
publish = false

[package.metadata.dist]
dist = false

[dependencies]
cruise = { path = ".." }
home = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["sync", "rt"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lints.clippy]
dbg_macro = "deny"
expect_used = "deny"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
